--- a/src/baicaijia/index.html
+++ b/src/baicaijia/index.html
@@ -4,23 +4,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1,minimum-scale=1,user-scalable=no">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./less/index.css">
     <title>慢慢买</title>
-    <style>
-        div:nth-child(1) {
-            width: 200px;
-            height: 200px;
-            background-color: aqua;
-            margin: 100px auto;
-        }
-    </style>
 </head>
 
 <body>
-    <div></div>
+    <div class="sort_view">
+        <header class="clearfix">
+            <a href="javascript:;" class="back"><i class="glyphicon glyphicon-menu-left"></i></a>
+            <h4>白菜价-淘宝内部券</h4>
+            <a href="javascript:;" class="menu"></a>
+        </header>
+        <div class="searchbtn clearfix" id="wrapper">
+            <ul class="category_nav clearfix ">
+                <!-- <li class="active">
+                    <a href="javascript:; ">全部</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">热销</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">9块邮</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">19块邮</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">数码家电</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">居家</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">美食</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">男装</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">女装</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">鞋包配饰</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">文体</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">母婴</a>
+                </li>
+                <li>
+                    <a href="javascript:; ">美妆</a>
+                </li> -->
+            </ul>
+        </div>
+        <div class="goodshow">
+            <ul id="goods">
+
+            </ul>
+        </div>
+    </div>
+    <script src="../../dist/baicaijia/js/lib.js "></script>
+    <script src="js/itcastEvent.js"></script>
+    <script src="js/sort.js"></script>
+    <script type="text/javascript ">
+        var myscroll = new IScroll("#wrapper", {
+            scrollX: true,
+            scrollY: false,
+            hScrollbar: false,
+            vScrollbar: false,
+            vScroll: false
+        })
+    </script>
+    <script type="text/tem" id="listSample">
+        {{each $data item i}}
+        <li>
+            <a href="javascript:;" data-id="{{item.titleId}}">{{item.title}}</a>
+        </li>
+        {{/each}}
+    </script>
+    <script type="text.temp" id="listgoods">
+        {{each $data item i}}
+        <li class="clearfix pr" data-id="{{item.productId}}" data-tid="{{item.titleId}}">
+            {{@ item.productCoupon}} {{@ item.productCouponRemain}} {{@ item.productHref}} {{@ item.productImg}} {{@ item.productName}} {{@ item.productPrice}}
+        </li>
+        {{/each}}
+    </script>
+    <script>
+        $.get("http://139.199.192.48:9090/api/getbaicaijiaproduct", {
+            titleid: 0
+        }, function(data) {
+            $("#goods").html(template("listgoods", data.result));
+        })
+    </script>
+    <script>
+        $.get("http://139.199.192.48:9090/api/getbaicaijiatitle", function(data) {
+            $(".category_nav").html(template("listSample", data.result));
+        })
+        $(".category_nav").on("click", "a", function() {
+            var data = parseInt($(this).attr("data-id"));
+            console.log($(this).attr("data-id"));
+            $.get("http://139.199.192.48:9090/api/getbaicaijiaproduct", {
+                titleid: data
+            }, function(data) {
+                $("#goods").html(template("listgoods", data.result));
+            })
+        })
+    </script>
 </body>
-<script src="/dist/baicaijia/js/lib.js"></script>
+
 
 </html>
