除瀑布流和模糊界面问题版本

--- a/src/guoneisales/index.html
+++ b/src/guoneisales/index.html
@@ -16,7 +16,7 @@
         <header class="clearfix">
             <a href="javascript:;" class="back"><i class="glyphicon glyphicon-menu-left"></i></a>
             <h4>国内折扣</h4>
-            <a href="javascript:;" class="menu"></a>
+            <a href="http://m.manmanbuy.com/?o=download" class="menu"></a>
         </header>
         <div class="content">
             <ul class="clearfix" id="menu">
@@ -34,6 +34,8 @@
             </div>
             <!--尾部-->
             <div class="m_footer">
+                <p class="m-1"> <a href="http://m.manmanbuy.com/?o=download">手机APP下载</a><a href="http://m.manmanbuy.com">慢慢买手机版</a>
+                    <a href=""></a> -- 掌上比价平台</p>
                 <p class='m_en'>
                     m.manmanbuy.com
                     <img src="" alt="">
